--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-anyio==3.5.0
-asgiref==3.5.0
+anyio==3.6.1
+asgiref==3.5.2
 beautifulsoup4==4.11.1
-certifi==2021.10.8
+certifi==2022.5.18.1
 charset-normalizer==2.0.12
-Django==4.0.4
+Django==4.0.5
+django-crispy-forms==1.14.0
 h11==0.12.0
-httpcore==0.14.7
-httpx==0.22.0
+httpcore==0.15.0
+httpx==0.23.0
 idna==3.3
 requests==2.27.1
 rfc3986==1.5.0
@@ -16,4 +17,4 @@ sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.9
 wikipedia==1.4.0
-youtube-search-python==1.6.4
+youtube-search-python==1.6.5
