--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ asgiref==3.5.2
 beautifulsoup4==4.11.1
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
+dj-database-url==0.5.0
 Django==4.0.5
 django-crispy-forms==1.14.0
+gunicorn==20.1.0
 h11==0.12.0
 httpcore==0.15.0
 httpx==0.23.0
@@ -16,5 +18,6 @@ soupsieve==2.3.2.post1
 sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.9
+whitenoise==6.1.0
 wikipedia==1.4.0
 youtube-search-python==1.6.5
